# digital_coins

client/: App.tsx  babel.config.js  package-lock.json  package.json
client/api/: binanceApi.ts  bitstampApi.ts  coinBaseApi.ts  krakenApi.ts  liveCoinApi.ts  orderBookApi.tsx
client/components/: BitstampBookOrder.tsx  CoinBaseBookOrder.tsx  CoinButton.tsx  CoinDetails.tsx  KrakenBook.tsx  Layout.tsx  OrderBook.tsx  SettingItems.tsx
client/context/: dataStore.ts
client/screens/: Binance.tsx  Bitstamp.tsx  CoinBase.tsx  Coins.tsx  Kraken.tsx  LiveCoin.tsx  Platforms.tsx  StackNavigator.tsx
client/shared/constants/: coins.ts  exchanges.ts
client/types/: LiveCoinTypes.ts  NavigationTypes.ts  OrderBookTypes.ts
client/utils/: WithLayout.tsx  typeGueard.ts
python_server/: .env  .gitignore  README.md  db_workers.py  main.py  pyproject.toml  text.py
python_server/core/: __init__.py  db.py  models.py  monitor.py  redis.py
python_server/exchanges/: binance.py  bit_stamp.py  bit_stamp_redis.py  bitstamp_v2.py  by_bit.py  crypto_dot_com.py  kraken.py
python_server/graphs/: monitor_graph.py  monitor_log.csv
python_server/lists/: bit_stamp_lists.py
python_server/utils/: scraping_utils.py
server/: .env  README  jest.config.js  package-lock.json  package.json  tsconfig.json
server/src/: app.ts
server/src/controllers/: binanceController.ts  bitstampController.ts  coinbaseController.ts  liveCoinController.ts  orderBookController.ts
server/src/models/: bookOrderModel.ts  orderBookModel.ts
server/src/routs/: binanceRoute.ts  bitstampRoute.ts  coinbaseRoute.ts  (+3 more)
(+10 files in other folders)
